update blog post

--- a/_posts/2020-05-31-blog-post.md
+++ b/_posts/2020-05-31-blog-post.md
@@ -13,3 +13,29 @@ author: "OSS-5"
  그래서 나는 쓸만한 word cloud 오픈소스를 찾았는데, 하나도 발견하지 못했다. (이건 예전 일이니 지금은 좀 다를 수도 있겠다.)
 
  돌아오는 기차 안에서 심심했던 차에 코드를 구상했다.
+
+## 2. 초기 개발 과정 및 개발 과정 중 어려움
+
+ 우선 문서를 불러와야 했다. 나는 미국 헌법 조문을 사용했다.
+
+```
+ with open("constitution.txt") as f:
+        lines f.readlines()                                                                            
+    text = "".join(lines) 
+```
+
+ 그 다음에는 단어에 비중을 두어서 추출해야 했다. 예를 들어 그 문서에서 단어가 얼마나 자주 등장하는지를 기준으로 하고자 했다. 나는 scikit-learn의  CountVectorizer(역주 : 단어들의 출현빈도로 문서들을 벡터화하는 클래스. 또한 이 과정에서 모두 소문자로 변환한다) 를 사용했다. 
+ 
+ 나는 가장 많이 등장하는 200개의 단어를의 출현빈도를 얻었고, 가장 많이 등장하는 출현빈도를 통해 정규화하였다.
+
+```
+cv = CountVectorizer(min_df=0, charset_error="ignore",                                               
+                         stop_words="english", max_features=200)
+counts = cv.fit_transform([text]).toarray().ravel()                                                  
+words = np.array(cv.get_feature_names()) 
+# normalize                                                                                                                                             
+counts = counts / float(counts.max())
+
+```
+
+
